--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@ layout: default
 title:  'Welcome'
 ---
 
-<h1>Jekyll Bootstrap starter template</h1>
+<h1>List of know offline network projects</h1>
 
-<p class="lead">
-  Use this document as a way to quickly start any new project.<br>
-  All you get is this text and a mostly barebones HTML document.
-</p>
-
+This is a first list of projects that uses different technologies to create a network and provides a user experience different from using the normal Internet.
+<br /> Please feel free to contribute at the link above and add you project via creating a "Pull request" or file a "Github issue".
 
 
 <table>
@@ -20,10 +17,10 @@ title:  'Welcome'
 	<td>{{ proj.name }}</td>
 	<td>{{ proj.description }} </td>
 	<td>{{ proj.categories }} </td>
-{% if proj.url == blank %}
-	<td><a href="projects/{{ proj.name }}.html">small project page</a>
-{% else %}
+{% if  proj.url  %}
 	<td><a href="{{ proj.url }}" target="_blank">Website</a></td>
+{% else %}
+	<td><a href="projects/{{ proj.name }}.html">small project page</a>
 {% endif %}
   </tr>
 {% endfor %}
