--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ This is a first list of projects that uses different technologies to create a ne
   <tr>
 	<td>{{ proj.name }}</td>
 	<td>{{ proj.description }} </td>
+	<td>{{ proj.plattforms }} </td>
 	<td>{{ proj.categories }} </td>
 {% if  proj.url  %}
 	<td><a href="{{ proj.url }}" target="_blank">Website</a></td>
