--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ This is a first list of projects that uses different technologies to create a ne
 
 
 <table>
-<tr><th>Name</th><th>Description</th><th>Categories</th><th>Project Website</th></tr>
+<tr><th>Name</th><th>Description</th><th>Supported Plattforms</th><th>Categories</th><th>Project Website</th></tr>
 {% for project_hash in site.data.projects %}
 {% assign proj = project_hash[1] %}
   <tr>
