--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title:  'Welcome'
 ---
 
-<h1>List of know offline network projects</h1>
+<h1>List of known offline networking projects</h1>
 
 This is a first list of projects that uses different technologies to create a network and provides a user experience different from using the normal Internet.
 <br /> Please feel free to contribute at the link above and add you project via creating a "Pull request" or file a "Github issue".
